hphp/hack/test/typecheck/string_expressions11.php.exp
File "string_expressions11.php", line 17, characters 20-30:
Variable Variables are not legal (Parsing[1002])
